--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,8 @@ android {
         applicationId "com.almadev.znaniesila"
         minSdkVersion 15
         targetSdkVersion 21
+        versionCode 5
+        versionName "1.1"
     }
 
     signingConfigs {
@@ -49,6 +51,12 @@ android {
             debuggable true
             minifyEnabled false
             signingConfig signingConfigs.debug
+        }
+    }
+
+    applicationVariants.all { variant ->
+        variant.outputs.each { output ->
+            output.outputFile = file("$project.buildDir/binary/znanie-sila.apk")
         }
     }
 }
