--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,9 @@ android {
     defaultConfig {
         applicationId "com.almadev.znaniesila"
         minSdkVersion 15
-        targetSdkVersion 21
-        versionCode 6
-        versionName "1.2"
+        targetSdkVersion 22
+        versionCode 7
+        versionName "1.3"
     }
 
     signingConfigs {
@@ -73,6 +73,7 @@ dependencies {
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.android.support:support-v13:23.0.1'
     compile 'com.jpardogo.materialtabstrip:library:1.1.0'
+    compile "com.android.support:appcompat-v7:23.0.+"
     compile('com.crashlytics.sdk.android:crashlytics:2.5.2@aar') {
         transitive = true;
     }
