--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.almadev.znaniesila"
+    android:installLocation="preferExternal"
     android:versionCode="1"
-  android:installLocation="preferExternal"
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="9" />
@@ -15,8 +15,8 @@
     <uses-permission android:name="ANDROID.PERMISSION.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.android.vending.BILLING" />
 
-
-    <!-- android:theme="@android:style/Theme.Black.NoTitleBar"> -->
+    <android:uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <android:uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- android:theme="@android:style/Theme.Black.NoTitleBar"> -->
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -60,17 +60,22 @@
         <activity
             android:name=".AboutScreen"
             android:screenOrientation="portrait" />
-        <activity android:name=".KnowledgeActivity"
-                  android:screenOrientation="portrait">
+        <activity
+            android:name=".KnowledgeActivity"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".KnwoledgeDescription"
-            android:screenOrientation="portrait"
-            android:label="@string/title_activity_knwoledge_description" >
+            android:label="@string/title_activity_knwoledge_description"
+            android:screenOrientation="portrait" >
         </activity>
+
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="8c55be5eb3d4573c25f8350239df3642763a9d32" />
+
+        <activity android:name=".SettingsActivity" >
+        </activity>
     </application>
 
 </manifest>
