--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ android {
         applicationId "com.almadev.znaniesila"
         minSdkVersion 15
         targetSdkVersion 22
-        versionCode 12
-        versionName "1.8"
+        versionCode 15
+        versionName "1.87"
     }
 
     signingConfigs {
@@ -62,10 +62,11 @@ android {
 }
 
 dependencies {
-    compile files('libs/chartboost.jar')
+    compile 'com.yandex.android:mobmetricalib:2.21'
+    //    compile files('libs/chartboost.jar')
     compile files('libs/commons-io-2.0.1.jar')
-    compile files('libs/google-play-services.jar')
     compile files('libs/gson-2.3.1.jar')
+    //    compile 'com.google.android.gms:play-services:8.3.0'
     compile 'com.android.support:support-v4:23.0.1'
     compile 'com.android.support:cardview-v7:23.0.1'
     compile 'com.android.support:recyclerview-v7:23.0.1'
@@ -73,9 +74,11 @@ dependencies {
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.android.support:support-v13:23.0.1'
     compile 'com.jpardogo.materialtabstrip:library:1.1.0'
-    compile "com.android.support:appcompat-v7:23.0.+"
+    compile 'com.android.support:appcompat-v7:23.0.+'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.2@aar') {
         transitive = true;
     }
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile files('libs/GoogleConversionTrackingSdk-2.2.4.jar')
+    compile files('libs/google-play-services.jar')
 }
