--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,22 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath 'com.android.tools.build:gradle:1.3.1'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+    }
+
+    ext {
+        android_compile_version = 23
+        android_version = '23.0.1'
+        android_min_sdk_version = 15
+
+        appcompat_library_version = '23.0.1'
+        support_library_version = '23.0.1'
+        gms_library_version = '8.3.0'
     }
 }
