--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
         applicationId "com.almadev.znaniesila"
         minSdkVersion 15
         targetSdkVersion 22
-        versionCode 23
+        versionCode 24
         versionName "1.893"
     }
 
@@ -70,14 +70,14 @@ dependencies {
     compile 'com.google.android.gms:play-services-games:8.3.0'
     compile 'com.google.android.gms:play-services-auth:8.3.0'
     compile 'com.google.android.gms:play-services-plus:8.3.0'
-    compile 'com.android.support:support-v4:23.0.1'
-    compile 'com.android.support:cardview-v7:23.0.1'
-    compile 'com.android.support:recyclerview-v7:23.0.1'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'de.greenrobot:eventbus:2.4.0'
-    compile 'com.android.support:support-v13:23.0.1'
+    compile 'com.android.support:support-v13:23.1.1'
     compile 'com.jpardogo.materialtabstrip:library:1.1.0'
-    compile 'com.android.support:appcompat-v7:23.0.+'
+    compile 'com.android.support:appcompat-v7:23.1.+'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.2@aar') {
         transitive = true;
     }
@@ -86,4 +86,5 @@ dependencies {
     //    compile files('libs/google-play-services.jar')
     compile files('libs/FlurryAnalytics-6.2.0.jar')
     compile project(':BaseGameUtils')
+    compile project(':RecycleAnimation')
 }
