--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          package="com.almadev.znaniesila"
-          android:installLocation="preferExternal"
-          android:versionCode="1"
-          android:versionName="1.0">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.almadev.znaniesila"
+    android:installLocation="preferExternal"
+    android:versionCode="1"
+    android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="9" />
 
@@ -15,6 +15,9 @@
     <uses-permission android:name="ANDROID.PERMISSION.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="ANDROID.PERMISSION.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.android.vending.BILLING" />
+
+    <android:uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <android:uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".ZSApp"
@@ -35,11 +38,6 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".HACategoriesScreen"
@@ -74,16 +72,18 @@
             android:name="io.fabric.ApiKey"
             android:value="8c55be5eb3d4573c25f8350239df3642763a9d32" />
 
-        <activity android:name=".SettingsActivity" >
+        <activity android:name=".SettingsActivity"
+            android:screenOrientation="portrait" >
         </activity>
 
-        <!--Register Google receiver through Yandex API-->
-        <!--<receiver android:name="com.google.ads.conversiontracking.InstallReceiver"-->
-                  <!--android:exported="true">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="com.android.vending.INSTALL_REFERRER" />-->
-            <!--</intent-filter>-->
-        <!--</receiver>-->
+        <!-- Register Google receiver through Yandex API -->
+        <!-- <receiver android:name="com.google.ads.conversiontracking.InstallReceiver" -->
+        <!-- android:exported="true"> -->
+        <!-- <intent-filter> -->
+        <!-- <action android:name="com.android.vending.INSTALL_REFERRER" /> -->
+        <!-- </intent-filter> -->
+        <!-- </receiver> -->
+
 
         <!-- Yandex Metrica required manifest entries START -->
         <service
@@ -91,29 +91,42 @@
             android:enabled="true"
             android:exported="true"
             android:process=":Metrica"
-            tools:ignore="ExportedService">
-
+            tools:ignore="ExportedService" >
             <intent-filter>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <action android:name="com.yandex.metrica.IMetricaService"/>
-                <data android:scheme="metrica"/>
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <action android:name="com.yandex.metrica.IMetricaService" />
+
+                <data android:scheme="metrica" />
             </intent-filter>
 
-            <meta-data android:name="metrica:api:level" android:value="36"/>
+            <meta-data
+                android:name="metrica:api:level"
+                android:value="36" />
         </service>
+
+        <activity android:name="com.vk.sdk.VKServiceActivity" android:label="ServiceActivity" android:theme="@style/VK.Transparent" />
 
         <receiver
             android:name="com.yandex.metrica.MetricaEventHandler"
             android:enabled="true"
-            android:exported="true">
+            android:exported="true" >
 
             <!-- Required for tracking campaigns -->
             <intent-filter>
-                <action android:name="com.android.vending.INSTALL_REFERRER"/>
+                <action android:name="com.android.vending.INSTALL_REFERRER" />
             </intent-filter>
         </receiver>
         <!-- end of Yandex Metrica -->
 
+        <activity android:name=".SplashActivity"
+            android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
